lots of progress and call is successful

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,8 @@
 	display: none;
 }
 
-.result {
-	border: 1px solid black;
+.results {
+	/*border: 1px solid black; */
 	padding: 5px;
 	margin: 0 auto 1em auto;
 }
