--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@
 }
 
 .results {
-	/*border: 1px solid black; */
 	padding: 5px;
 	margin: 0 auto 1em auto;
 }
@@ -19,4 +18,9 @@
 	border: 1px solid black;
 	padding: 2px;
 	margin: 1em auto 1em auto;
+}
+
+.social {
+	display: inline;
+	padding: .25em;
 }
