--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,109 @@
+
+
+@media only screen and (max-width: 37.5em)
+html, body {
+    font-size: 18px;
+    line-height: 26px;
+}
+
+@media only screen and (max-width: 61.5em)
+body {
+}
+
+html,
+body {
+    font-family: 'Cormorant Garamond', serif;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 30px;
+    text-rendering: optimizeLegibility;
+    color: #222;
+    background-color: #fff;
+    height: 100%;
+}
+
+body {
+    margin: 0.5;
+    font-size: 1.2em;
+		font-weight: bold;
+    line-height: 1.4;
+}
+
+h1,
+h2,
+h3 {
+		font-family: 'Bad Script', cursive;
+}
+
+h1 {
+		margin: 0 0 6px;
+		font-size: 1.3;
+}
+
+header,
+footer,
+.main-container {
+	width: 960px;
+	max-width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+header {
+    margin-top: 48px;
+    margin-bottom: 36px;
+}
+
+footer {
+    margin-top: 12px;
+    margin-bottom: 24px;
+}
+
+.main-container {
+		margin-top: 10px;
+		margin-bottom: 10px;
+}
+
+.etsy-search {
+	border: 1px dotted #999;
+border-radius: 0;
+}
+
+.listing {
+    position: relative;
+    margin: 0 auto;
+    padding: 5px;
+}
+
 /* hide templates which hold data returned in api call */
 .hidden {
-	display: none;
+		display: none;
 }
 
 .results {
-	padding: 5px;
-	margin: 0 auto 1em auto;
+		padding: 5px;
+		margin: 0 auto 1em auto;
 }
 
 .error {
-	background-color: #F78181;
-	padding: 1em;
+		background-color: #F78181;
+		padding: 1em;
 }
 
 .search-results-qty {
-	background-color: lightgray;
-	border: 1px solid black;
-	padding: 2px;
-	margin: 1em auto 1em auto;
+		background-color: #e3e3e3;
+		border-style: groove;
+		border-color: black;
+		border-width: 2px;
+		padding: 1.5px 10px;
+		margin: 1em auto;
+}
+
+.search-results-query {
+ 		font-family: 'Bad Script', cursive;
 }
 
 .social {
-	display: inline;
-	padding: .25em;
+		display: inline;
+		padding: 0 1em 0 0;
 }
