--- a/css/styles.css
+++ b/css/styles.css
@@ -15,15 +15,16 @@ body {
     font-family: 'Cormorant Garamond', serif;
     font-style: normal;
     font-size: 18px;
-    line-height: 30px;
     text-rendering: optimizeLegibility;
-    color: #222;
+    color: #333;
     background-color: #fff;
     height: 100%;
 }
 
 body {
-    margin: 0.5;
+    margin: 0.5 auto;
+		max-width: 50em;
+		padding: 1em 1em;
     font-size: 1.2em;
 		font-weight: bold;
     line-height: 1.4;
@@ -33,6 +34,7 @@ h1,
 h2,
 h3 {
 		font-family: 'Bad Script', cursive;
+		color: #222;
 }
 
 h1 {
@@ -41,32 +43,38 @@ h1 {
 }
 
 header,
-footer,
-.main-container {
-	width: 960px;
-	max-width: 100%;
-	margin-left: auto;
-	margin-right: auto;
+footer {
+		margin-left: auto;
+		margin-right: auto;
 }
 
 header {
-    margin-top: 48px;
+    margin-top: 40px;
     margin-bottom: 36px;
 }
 
 footer {
-    margin-top: 12px;
-    margin-bottom: 24px;
-}
-
-.main-container {
-		margin-top: 10px;
-		margin-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+		text-align: center;
 }
 
 .etsy-search {
-	border: 1px dotted #999;
-border-radius: 0;
+	  border: 3px solid #222;
+		width: 15em;
+		padding: .3em;
+		line-height: .6em;
+		font-size: .8em;
+}
+
+/* custom selectors */
+.error {
+		background-color: #F78181;
+		padding: 1em;
+}
+
+.hidden {
+		display: none;
 }
 
 .listing {
@@ -75,9 +83,24 @@ border-radius: 0;
     padding: 5px;
 }
 
-/* hide templates which hold data returned in api call */
-.hidden {
-		display: none;
+.listing-container {
+		display: flex;
+		flex-direction: row;
+}
+
+.main-container {
+		margin-top: 10px;
+		margin-bottom: 10px;
+		margin-left: auto;
+		margin-right: auto;
+}
+
+.morecontent span {
+    display: none;
+}
+
+.morelink {
+    display: block;
 }
 
 .results {
@@ -85,18 +108,24 @@ border-radius: 0;
 		margin: 0 auto 1em auto;
 }
 
-.error {
-		background-color: #F78181;
-		padding: 1em;
+.search-button {
+		border: 3px solid #444;
+		border-radius: 9em;
+		width: 7em;
+		padding: .4em;
+		font-size: .6em;
+		font-weight: bold;
+		line-height: .95em;
 }
 
 .search-results-qty {
+		width: 25em;
 		background-color: #e3e3e3;
 		border-style: groove;
 		border-color: black;
 		border-width: 2px;
 		padding: 1.5px 10px;
-		margin: 1em auto;
+		margin: 1em 0 .5em 0;
 }
 
 .search-results-query {
