--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 @media only screen and (max-width: 37.5em)
 html, body {
     font-size: 18px;
-    line-height: 26px;
+    line-height: 24px;
 }
 
 @media only screen and (max-width: 61.5em)
@@ -22,9 +22,9 @@ body {
 }
 
 body {
-    margin: 0.5 auto;
-		max-width: 50em;
-		padding: 1em 1em;
+    margin: 0.25 auto;
+		max-width: 40em;
+		padding: 1em;
     font-size: 1.2em;
 		font-weight: bold;
     line-height: 1.4;
@@ -49,7 +49,7 @@ footer {
 }
 
 header {
-    margin-top: 16px;
+    margin-top: 12px;
     margin-bottom: 30px;
 }
 
